feat: user auth feature
